# RF24

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .readthedocs.yaml  AGENTS.md  ATTiny.html  ATXMEGA.html  Arduino.html  CHANGELOG.md  CHANGELOG_8md.html  CMakeLists.txt  CMakeLists_required_to_stm32.txt  COMMON_ISSUES.md  COMMON__ISSUES_8md.html  CONTRIBUTING.md  CONTRIBUTING_8md.html  CrossCompile.html  Doxyfile  FAQ  Jamfile  Kconfig  LICENSE  Linux.html  MRAA.html  Makefile  Makefile.Debian  Makefile.html  Makefile.inc  Makefile.littlewire  Makefile_source.html  Portability.html  Python.html  README  README.md  RF24.c  RF24.cpp  RF24.h  RF24_8cpp.html  RF24_8cpp_source.html  (+180 more)
.github/: dependabot.yml  doxygen.py
RPi/: .gitignore  bcm2835.c  readme.md
cmake/: AutoConfig_RF24_DRIVER.cmake  CPackInfo.cmake  Cache.cmake  CompilerWarnings.cmake  Doxygen.cmake  GetLibInfo.cmake  GetLibVersion.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  copy_includes.cmake  createDebianPkg.cmake  deb_pkg_control.in  deb_pkg_copyright.in  detectCPU.cmake  enableNcursesExample.cmake  pico_sdk_import.cmake  toolchain_arm.cmake
debian/: TODO  changelog  control  files  rules
docs/: Doxyfile  README.md  arduino.md  atmegax.md  attiny.md  atxmega.md  ci.py  cross_compile.md  doxygen-custom.css  linux_install.md  main_page.md  migration.md  mraa.md  pico_sdk.md  portability.md  portabillity.md  python_wrapper.md  rpi_general.md  stm32cube.md  using_cmake.md
examples/: examples_formatter.conf
examples_BBB/: Makefile  README.md  rf24_bbb.cpp
examples_RPi/: Makefile  gettingstarted.cpp  gettingstarted_call_response.cpp  pingpair_dyn.cpp  pingpair_dyn.py  transfer.cpp  transfer_interrupt.cpp
examples_esp/getting_started/: .gitignore  CMakeLists.txt  Kconfig  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.esp32s2
examples_esp/getting_started/lib/: README
examples_esp/getting_started/src/: CMakeLists.txt  idf_component.yml  main.cpp
examples_linux/: CMakeLists.txt  Makefile  Makefile.examples  acknowledgementPayloads.cpp  acknowledgement_payloads.py  connectionCheck.cpp  curses_scanner.py  fakeBLE.cpp  getting_started.py  gettingstarted.c  gettingstarted.cpp  gettingstarted_call_response.c  gettingstarted_call_response.cpp  interruptConfigure.cpp  interrupt_configure.py  manualAcknowledgements.cpp  manual_acknowledgements.py  multiceiverDemo.cpp  multiceiver_demo.py  pingpair_dyn.c  pingpair_dyn.cpp  pingpair_dyn.py  readme.md  scanner.cpp  scanner.py  stream_data.py  streamingData.cpp  streaming_data.py  transfer.c  transfer.cpp
examples_linux/BBB/: Makefile  rf24_bbb.cpp
examples_linux/extra/: Makefile  rpi-hub.cpp  scanner.cpp
examples_linux/interrupts/: Makefile  gettingstarted_call_response_int.cpp  gettingstarted_call_response_int2.cpp  pingpair_dyn_int.cpp  transfer_interrupt.cpp
examples_linux/ncurses/: CMakeLists.txt  scanner_curses.cpp
examples_linux_c/: gettingstarted.c  gettingstarted_call_response.c  pingpair_dyn.c  pingpair_dyn.py  transfer.c
examples_pico/: CMakeLists.txt  acknowledgementPayloads.cpp  defaultPins.h  gettingStarted.cpp  interruptConfigure.cpp  manualAcknowledgements.cpp  multiceiverDemo.cpp  multipleRadios.cpp  scanner.cpp  streamingData.cpp
librf24-rpi/: Makefile  readme.md  readme.txt
pyRF24/: README.md  crossunixccompiler.py  pyRF24.cpp  pyproject.toml  readme.md  setup.py
pyRF24/pyRF24/: pyRF24.cpp  setup.py
pyRF24/pyRF24Mesh/: example_master.py  pyRF24Mesh.cpp  setup.py
pyRF24/pyRF24Network/: pyRF24Network.cpp  setup.py
pyRF24/pyRF24Network/examples/: helloworld_rx.py  helloworld_tx.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_29.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  (+85 more)
spidev/: SPIClass.cpp  SPIClass.h
utility/: .clang-format  CMakeLists.txt
utility/ATTiny/: RF24_arch_config.h  spi.h
utility/ATXMegaD3/: README.md  RF24_arch_config.h  compatibility.c  compatibility.h  gpio.cpp  gpio.h  gpio_helper.c  gpio_helper.h  includes.h  spi.cpp  spi.h
utility/BBB/: includes.h  spi.cpp
utility/Due/: RF24_arch_config.h
utility/LittleWire/: CMakeLists.txt  RF24_arch_config.h  includes.h
utility/MRAA/: CMakeLists.txt  RF24_arch_config.h  compatibility.c  compatibility.cpp  compatibility.h  gpio.cpp  gpio.h  includes.h  interrupt.cpp  interrupt.h  spi.cpp  spi.h
utility/RPi/: CMakeLists.txt  RF24_arch_config.h  bcm2835.c  bcm2835.h  compatibility.c  compatibility.cpp  compatibility.h  includes.h  interrupt.c  interrupt.cpp  interrupt.h  spi.cpp  spi.h
utility/RPi-Pico/: RF24_arch_config.h  gpio.cpp  gpio.h  includes.h  spi.cpp  spi.h
utility/SPIDEV/: CMakeLists.txt  RF24_arch_config.h  compatibility.c  compatibility.cpp  compatibility.h  gpio.cpp  gpio.h  includes.h  interrupt.c  interrupt.cpp  interrupt.h  spi.cpp  spi.h
utility/STM32/: CMakeLists.txt  RF24_arch_config.h  compatibility.cpp  compatibility.h  gpio.cpp  gpio.h  includes.h  rf24_stm32.cpp  spi.cpp  spi.h
utility/Teensy/: RF24_arch_config.h
utility/Template/: CMakeLists.txt  RF24_arch_config.h  compatibility.h  gpio.h  includes.h  spi.h
utility/XC8/: spi.c  spi.h  xc8_config.h
utility/esp_idf/: CMakeLists.txt  RF24_arch_config.h  compatibility.cpp  compatibility.h  gpio.cpp  gpio.h  spi.cpp  spi.h
utility/pigpio/: RF24_arch_config.h  compatibility.cpp  compatibility.h  gpio.cpp  gpio.h  includes.h  interrupt.cpp  interrupt.h  spi.cpp  spi.h
utility/rp2/: CMakeLists.txt  RF24_arch_config.h  compatibility.h  gpio.cpp  gpio.h  includes.h  spi.cpp  spi.h
utility/sbridge/: RF24_arch_config.h  bcm2835.c  includes.h  spi.c  spi.h
utility/wiringPi/: CMakeLists.txt  RF24_arch_config.h  includes.h  interrupt.h  spi.cpp  spi.h
(+361 files in other folders)
